:sparkles: API & Navigation
Consumo a API e add rotas para navegar entre pages

--- a/mobile/.babelrc
+++ b/mobile/.babelrc
@@ -21,7 +21,9 @@
           "components": "./src/components",
           "screens": "./src/screens",
           "theme": "./src/theme",
-          "utils": "./src/utils"
+          "utils": "./src/utils",
+          "routes": "./src/routes",
+          "types": "./src/@types"
         }
       }
     ]
